--- a/nytingdalecare.co.uk-html/contact.html
+++ b/nytingdalecare.co.uk-html/contact.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 
-<!-- Mirrored from bracketweb.com/careold-html/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Mar 2025 05:42:04 GMT -->
+<!-- Created for Nytingdalecare/contact.html by TIANTAcreative Tinotenda chigwida/34.9 [XR&CO'2025], Mon, 09 Mar 2025 05:42:04 GMT -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact || Careold || HTML Template For Senior Care & Medical</title>
+    <title>Contact || Nytingdalecare || Home, Senior & Medical Care</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -55,11 +55,12 @@
                     <ul class="list-unstyled topbar-one__info">
                         <li class="topbar-one__info__item">
                             <i class="fas fa-map-marker-alt topbar-one__info__icon"></i>
-                            27 Global Str, San Fransisco, SF 41412
+                            14 Maes Cantref Llanilid
+Pontyclun CF72 4AD
                         </li>
                         <li class="topbar-one__info__item">
                             <i class="fas fa-envelope topbar-one__info__icon"></i>
-                            <a href="mailto:Support@gmail.com">Support@gmail.com</a>
+                            <a href="mailto:admin@nytingdalecare.co.uk">admin@nytingdalecare.co.uk</a>
                         </li>
                     </ul><!-- /.list-unstyled topbar-one__info -->
                     <div class="topbar-one__right">
@@ -367,7 +368,7 @@
                                     <i class="icon-phone"></i>
                                 </span>
                             </div>
-                            <a href="tel:+98301101204">+983 01 10 12 04</a>
+                            <a href="tel:+98301101204">+44 778 669 4804</a>
                         </div>
                         <a href="cart.html" class="main-header__cart">
                             <i class="fas fa-shopping-cart" aria-hidden="true"></i>
@@ -416,7 +417,7 @@
                                     </div><!-- /.contact-one__info__icon -->
                                     <div class="contact-one__info__content">
                                         <h4 class="contact-one__info__title">Our Address</h4><!-- /.contact-one__info__title -->
-                                        <p class="contact-one__info__text">130 Granite Run Drive Suite <br>Hobert, CA 10010, USA.</p>
+                                        <p class="contact-one__info__text">14 Maes Cantref  <br>Llanilid, Pontyclun, CF72 4AD, UK.</p>
                                         <!-- /.contact-one__info__text -->
                                     </div><!-- /.contact-one__info__content -->
                                 </li>
@@ -430,8 +431,8 @@
                                     <div class="contact-one__info__content">
                                         <h4 class="contact-one__info__title">Support</h4><!-- /.contact-one__info__title -->
                                         <p class="contact-one__info__text">
-                                            <a href="tel:+00881745651">+00(88) 17456 51</a><br>
-                                            <a href="mailto:Support24@gmail.com">Support24@gmail.com</a>
+                                            <a href="tel:+447786694804">+44 778 669 4804</a><br>
+                                            <a href="mailto:admin@nytingdalecare.co.uk">admin@nytingdalecare.co.uk</a>
                                         </p>
                                         <!-- /.contact-one__info__text -->
                                     </div><!-- /.contact-one__info__content -->
@@ -441,7 +442,7 @@
                     </div><!-- /.col-xl-7 -->
                     <div class="col-lg-7">
                         <div class="google-map google-map__contact">
-                            <iframe title="template google map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4562.753041141002!2d-118.80123790098536!3d34.152323469614075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e82469c2162619%3A0xba03efb7998eef6d!2sCostco+Wholesale!5e0!3m2!1sbn!2sbd!4v1562518641290!5m2!1sbn!2sbd" class="map__contact" allowfullscreen></iframe>
+                            <iframe title="template google map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6555.61487221268!2d-3.4692772971503563!3d51.5317693693413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486e136c0740ea57%3A0xbaf1d2803372b252!2s14%20Maes%20Cantref%2C%20Llanilid%2C%20Pontyclun%2C%20Bridgend%20CF72%204AD%2C%20UK!5e0!3m2!1sen!2sza!4v1741588171615!5m2!1sen!2sza" class="map__contact" allowfullscreen></iframe>
                         </div>
                         <!-- /.google-map -->
                     </div><!-- /.col-xl-5 -->
@@ -700,5 +701,5 @@
 </body>
 
 
-<!-- Mirrored from bracketweb.com/careold-html/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Mar 2025 05:42:09 GMT -->
+<!-- Created for Nytingdalecare/contact.html by TIANTAcreative Tinotenda chigwida/34.9 [XR&CO'2025], Mon, 09 Mar 2025 05:42:09 GMT -->
 </html>
