--- a/nytingdalecare.co.uk-html/index-2-one-page.html
+++ b/nytingdalecare.co.uk-html/index-2-one-page.html
@@ -224,7 +224,7 @@ Pontyclun CF72 4AD
                                     <i class="icon-phone"></i>
                                 </span>
                             </div>
-                            <a href="tel:+98301101204">+44 778 669 4804</a>
+                            <a href="tel:+441443567137">+44 144 356 7137</a>
                         </div>
                         <a href="cart.html" class="main-header__cart">
                             <i class="fas fa-shopping-cart" aria-hidden="true"></i>
@@ -1183,7 +1183,7 @@ Pontyclun CF72 4AD
                                     <img src="assets/images/logo-light.png" width="185" alt="Careold HTML Template">
                                 </a>
                                 <p class="footer-widget__text">
-                                    Over 20 years of experience<br> we’ll ensure you get the best<br> guidance Senior Care.
+                                    We understand that choosing <br>the right care for yourself or your loved ones <br>is a significant decision.
                                 </p>
                             </div><!-- /.footer-widget -->
                         </div><!-- /.col-md-6 -->
@@ -1247,7 +1247,7 @@ Pontyclun CF72 4AD
                 <div class="container">
                     <div class="main-footer__bottom__inner">
                         <p class="main-footer__copyright">
-                            &copy; Copyright <span class="dynamic-year"></span> by Careold HTML Template.
+                            &copy; Copyright <span class="dynamic-year"></span> by TIANTAcreative.
                         </p>
                         <div class="main-footer__social">
 
@@ -1297,7 +1297,7 @@ Pontyclun CF72 4AD
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+44-778-669-4804">+44 778 669 4804</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
