--- a/nytingdalecare.co.uk-html/index-rtl.html
+++ b/nytingdalecare.co.uk-html/index-rtl.html
@@ -213,41 +213,20 @@ Pontyclun CF72 4AD
                                 <a href="about.html">About</a>
                             </li>
                             <li class="dropdown">
-                                <a href="#">Pages</a>
+                                <a href="#">Info</a>
                                 <ul>
                                     <li>
                                         <a href="portfolio.html">Our Portfolio</a>
-                                        <ul>
-                                            <li><a href="portfolio.html">Portfolio One</a></li>
-                                            <li><a href="portfolio-two.html">Portfolio Two</a></li>
-                                            <li><a href="portfolio-carousel.html">Portfolio Carousel</a></li>
-                                            <li><a href="portfolio-details.html">Portfolio Details</a></li>
-                                        </ul>
                                     </li>
                                     <li>
                                         <a href="team.html">Our Team</a>
-                                        <ul>
-                                            <li><a href="team.html">Team Page</a></li>
-                                            <li><a href="team-carousel.html">Team Carousel</a></li>
-                                            <li><a href="team-details.html">Team Details</a></li>
-                                        </ul>
                                     </li>
                                     <li><a href="reviews.html">Testimonial</a></li>
-                                    <li><a href="reviews-carousel.html">Testimonial Carousel</a></li>
                                     <li><a href="packages.html">Pricing</a></li>
-                                    <li><a href="packages-carousel.html">Pricing Carousel</a></li>
                                     <li>
-                                        <a href="gallery.html">Gallery</a>
-                                        <ul>
-                                            <li><a href="gallery.html">Gallery masonry</a></li>
-                                            <li><a href="gallery-filter.html">Gallery filter</a></li>
-                                            <li><a href="gallery-grid.html">Gallery Grid</a></li>
-                                            <li><a href="gallery-carousel.html">Gallery Carousel</a></li>
-                                        </ul>
+                                        <a href="gallery.html">Gallery</a>                                        
                                     </li>
                                     <li><a href="faq.html">FAQs</a></li>
-                                    <li><a href="login.html">Login</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -264,53 +243,8 @@ Pontyclun CF72 4AD
                                 </ul>
                             </li>
 
-                            <li class="dropdown">
-                                <a href="#">Shop</a>
-                                <ul class="sub-menu">
-                                    <li class="dropdown">
-                                        <a href="#">Products</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="products.html">No sidebar</a></li>
-                                            <li><a href="products-left.html">Left sidebar</a></li>
-                                            <li><a href="products-right.html">Right sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="products-carousel.html">Products carousel</a></li>
-                                    <li><a href="product-details.html">Product details</a></li>
-                                    <li><a href="cart.html">Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#">News</a>
-                                <ul class="sub-menu">
-                                    <li class="dropdown">
-                                        <a href="#">News grid</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-grid.html">No sidebar</a></li>
-                                            <li><a href="blog-grid-left.html">Left sidebar</a></li>
-                                            <li><a href="blog-grid-right.html">Right sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="#">News list</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-list.html">No sidebar</a></li>
-                                            <li><a href="blog-list-left.html">Left sidebar</a></li>
-                                            <li><a href="blog-list-right.html">Right sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="blog-carousel.html">News carousel</a></li>
-                                    <li class="dropdown">
-                                        <a href="#">News details</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog-details.html">No sidebar</a></li>
-                                            <li><a href="blog-details-left.html">Left sidebar</a></li>
-                                            <li><a href="blog-details-right.html">Right sidebar</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
+                            
+                            
                             <li>
                                 <a href="contact.html">Contact</a>
                             </li>
@@ -329,7 +263,7 @@ Pontyclun CF72 4AD
                                     <i class="icon-phone"></i>
                                 </span>
                             </div>
-                            <a href="tel:+98301101204">+44 778 669 4804</a>
+                            <a href="tel:+441443567137">+44 144 356 7137</a>
                         </div>
                         <a href="cart.html" class="main-header__cart">
                             <i class="fas fa-shopping-cart" aria-hidden="true"></i>
@@ -1386,7 +1320,7 @@ Pontyclun CF72 4AD
                                     <img src="assets/images/logo-light.png" width="185" alt="Careold HTML Template">
                                 </a>
                                 <p class="footer-widget__text">
-                                    Over 20 years of experience<br> we’ll ensure you get the best<br> guidance Senior Care.
+                                    We understand that choosing <br>the right care for yourself or your loved ones <br>is a significant decision.
                                 </p>
                             </div><!-- /.footer-widget -->
                         </div><!-- /.col-md-6 -->
@@ -1450,7 +1384,7 @@ Pontyclun CF72 4AD
                 <div class="container">
                     <div class="main-footer__bottom__inner">
                         <p class="main-footer__copyright">
-                            &copy; Copyright <span class="dynamic-year"></span> by Careold HTML Template.
+                            &copy; Copyright <span class="dynamic-year"></span> by TIANTAcreative.
                         </p>
                         <div class="main-footer__social">
 
@@ -1500,7 +1434,7 @@ Pontyclun CF72 4AD
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+44-778-669-4804">+44 778 669 4804</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
